fix image pathes

--- a/presentations/dependency-injection/index.html
+++ b/presentations/dependency-injection/index.html
@@ -40,25 +40,25 @@
           <h2>Primary Forms of<br>Dependency Injection</h2>
           <p>Before using Dependency Injection</p>
           <image height="250"
-          src="presentations/dependency-injection/assets/BeforeInjection.png"/>
+          src="./assets/BeforeInjection.png"/>
         </section>
 
         <section>
           <h2>Constructor Injection</h2>
           <image height="250"
-          src="presentations/dependency-injection/assets/ConstructorInjection.png"/>
+          src="./assets/ConstructorInjection.png"/>
         </section>
 
         <section>
           <h2>Property Injection</h2>
           <image height="250"
-          src="presentations/dependency-injection/assets/PropertyInjection.png"/>
+          src="./assets/PropertyInjection.png"/>
         </section>
 
         <section>
           <h2>Interface Injection</h2>
           <image height="250"
-          src="presentations/dependency-injection/assets/InterfaceInjection.png"/>
+          src="./assets/InterfaceInjection.png"/>
         </section>
       </section>
 
@@ -85,13 +85,13 @@
       </section>
         <section>
           <h3>Before Ninject</h3>
-          <image src="presentations/dependency-injection/assets/BeforeNinject.jpg"/>
-          <image src="presentations/dependency-injection/assets/BeforeNinOutput.jpg"/>
+          <image src="./assets/BeforeNinject.jpg"/>
+          <image src="./assets/BeforeNinOutput.jpg"/>
         </section>
         <section>
           <h3>After Ninject</h3>
-          <image src="presentations/dependency-injection/assets/AfterNinject.jpg"/>
-          <image src="presentations/dependency-injection/assets/AfterNinOutput.jpg"/>
+          <image src="./assets/AfterNinject.jpg"/>
+          <image src="./assets/AfterNinOutput.jpg"/>
         </section>
       </section>
 
