re-fix image pathes

--- a/presentations/dependency-injection/index.html
+++ b/presentations/dependency-injection/index.html
@@ -40,25 +40,25 @@
           <h2>Primary Forms of<br>Dependency Injection</h2>
           <p>Before using Dependency Injection</p>
           <image height="250"
-          src="./assets/BeforeInjection.png"/>
+          src="./presentations/dependency-injection/assets/BeforeInjection.PNG"/>
         </section>
 
         <section>
           <h2>Constructor Injection</h2>
           <image height="250"
-          src="./assets/ConstructorInjection.png"/>
+          src="./presentations/dependency-injection/assets/ConstructorInjection.PNG"/>
         </section>
 
         <section>
           <h2>Property Injection</h2>
           <image height="250"
-          src="./assets/PropertyInjection.png"/>
+          src="./presentations/dependency-injection/assets/PropertyInjection.PNG"/>
         </section>
 
         <section>
           <h2>Interface Injection</h2>
           <image height="250"
-          src="./assets/InterfaceInjection.png"/>
+          src="./presentations/dependency-injection/assets/InterfaceInjection.PNG"/>
         </section>
       </section>
 
@@ -85,19 +85,20 @@
       </section>
         <section>
           <h3>Before Ninject</h3>
-          <image src="./assets/BeforeNinject.jpg"/>
-          <image src="./assets/BeforeNinOutput.jpg"/>
+          <image src="./presentations/dependency-injection/assets/BeforeNinject.JPG"/>
+          <image src="./presentations/dependency-injection/assets/BeforeNinOutput.JPG"/>
         </section>
         <section>
           <h3>After Ninject</h3>
-          <image src="./assets/AfterNinject.jpg"/>
-          <image src="./assets/AfterNinOutput.jpg"/>
+          <image src="./presentations/dependency-injection/assets/AfterNinject.JPG"/>
+          <image src="./presentations/dependency-injection/assets/AfterNinOutput.JPG"/>
         </section>
       </section>
 
 
     </div>
   </div>
+  <div id="logo"></div>
   <script src="lib/js/head.min.js"></script>
   <script src="js/reveal.min.js"></script>
 
