WIP: replace mentions of main with master

--- a/presentations/pull-requests/index.html
+++ b/presentations/pull-requests/index.html
@@ -46,8 +46,8 @@
       <h2>The Pull Request Workflow</h2>
     </section>
     <section>
-    <h3>Traditionally</h3>
-    <cite>All developers add their changes straight into the main code</cite>
+    <h3>Without Pull Requests</h3>
+    <cite>All developers add their changes straight into master</cite>
     <div style="margin-top: 24px">
       <ul>
         <li class="fragment">Developer A is working on a new feature</li>
