troy-presentation: add platform

--- a/presentations/troy-app/index.html
+++ b/presentations/troy-app/index.html
@@ -59,6 +59,7 @@
 					<h3>Application platform</h3>
 					<ul>
 						<li class="fragment">Android</li>
+						<li class="fragment">Windows 8.1</li>
 						<li class="fragment">Windows 10</li>
 					</ul>
 				</section>
