improve troys app presso

--- a/presentations/troy-app/index.html
+++ b/presentations/troy-app/index.html
@@ -56,6 +56,10 @@
 					<p>Tracking various sets of data</p>
 				</section>
 				<section>
+					<h3>Current apps</h3>
+					<p>Not extendable - Basic</p>
+				</section>
+				<section>
 					<h3>Application platform</h3>
 					<ul>
 						<li class="fragment">Android</li>
