WIP: fix typo in git object presentation

--- a/presentations/git-internals-objects/index.html
+++ b/presentations/git-internals-objects/index.html
@@ -122,7 +122,7 @@
         
         <section>
           <h2>Let's read it!</h2>
-          <h3><pre>hash-object</pre></h3>
+          <h3><pre>cat-file</pre></h3>
           <pre><code data-trim>
             git cat-file -p 22f46444d223ec55b7677c6dd212b155fe2a7661
           </code></pre>
