wip: add more to the presentation

--- a/presentations/evo-moment-37/index.html
+++ b/presentations/evo-moment-37/index.html
@@ -6,7 +6,7 @@
 
 		<meta charset="utf-8">
 
-		<title>Evo Moment #37</title>
+		<title>EVO Moment #37</title>
 
 		<meta name="author" content="Troy Rijkaard">
         <meta name="description" content="Talk on what Evo moment #37 is">
@@ -48,13 +48,43 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h2>Evo Moment #37</h2>
+					<h2>EVO Moment #37</h2>
 					<p class="text-small push-right">The Daigo Parry</p>
 				</section>
 				<section>
-					<h3>The problem</h3>
-					<p>Tracking various sets of data</p>
-				</section>
+					<h3>What is EVO</h3>
+						<p class="fragment">Fighting game tournament</p>
+						<p class="fragment">Started in 1996 - occurs annually</p>
+						<p class="fragment">Many games are played, with Street Fighter IV alone bringing in over 2000 entries in 2015</p>
+				</section>
+				<section>
+					<h4>So what is moment #37?</h4>
+					<iframe width="640" height="360" src="https://www.youtube.com/embed/KS7hkwbKmBM" frameborder="0" allowfullscreen></iframe>
+				</section>
+				<section>
+					<h3>Why is this impressive?</h3>
+					<p class="fragment">And why am I boring you with this talk</p>
+					<p class="text-small push-right fragment">(I just wanted to talk about it...)</p>
+				</section>
+				<section>
+					<h3>Blocking and chip damage</h3>
+					<img src="http://i.imgur.com/Dw1MWX9.png" alt="evomoment37healthbars"></img>
+					<p class="fragment">So how is it solved?</p>
+				</section>
+				<section>
+					<h3>The Parry</h3>
+					<p class="fragment">Execution</p>
+					<p class="fragment">Game runs at 60fps</p>
+					<p class="fragment">Parry timing is 3 frames</p>
+					<p class="fragment">(1 second / 60 frames) * 3 =<br>(0.05 second)</p>
+				</section>
+				<section>
+					<h3>It was the </h3>
+				</section>
+				<section>
+					<h4>Another look</h4>
+					<iframe width="640" height="360" src="https://www.youtube.com/embed/KS7hkwbKmBM" frameborder="0" allowfullscreen></iframe>
+				</section>
 			</div>
 		</div>
 
