wip: update evo presentation

--- a/presentations/evo-moment-37/index.html
+++ b/presentations/evo-moment-37/index.html
@@ -75,8 +75,8 @@
 					<h3>The Parry</h3>
 					<p class="fragment">Execution</p>
 					<p class="fragment">Game runs at 60fps</p>
-					<p class="fragment">Parry timing is 3 frames</p>
-					<p class="fragment">(1 second / 60 frames) * 3 =<br>(0.05 second)</p>
+					<p class="fragment">Parry timing is 3-10 frames</p>
+					<p class="fragment">(1 second / 60 frames) * 10 =<br>(0.16 second)</p>
 				</section>
 				<section>
 					<h3>It was the </h3>
