wip: add more to presentation

--- a/presentations/evo-moment-37/index.html
+++ b/presentations/evo-moment-37/index.html
@@ -58,12 +58,12 @@
 						<p class="fragment">Many games are played, with Street Fighter IV alone bringing in over 2000 entries in 2015</p>
 				</section>
 				<section>
-					<h4>So what is moment #37?</h4>
+					<h4>So what is EVO moment #37?</h4>
 					<iframe width="640" height="360" src="https://www.youtube.com/embed/KS7hkwbKmBM" frameborder="0" allowfullscreen></iframe>
 				</section>
 				<section>
 					<h3>Why is this impressive?</h3>
-					<p class="fragment">And why am I boring you with this talk</p>
+					<p>And why am I boring you with this talk</p>
 					<p class="text-small push-right fragment">(I just wanted to talk about it...)</p>
 				</section>
 				<section>
@@ -79,7 +79,9 @@
 					<p class="fragment">(1 second / 60 frames) * 10 =<br>(0.16 second)</p>
 				</section>
 				<section>
-					<h3>It was the </h3>
+					<h3>The Super</h3>
+					<p class="fragment">14 hits</p>
+					<p class="fragment">Followed by 1 hit</p>
 				</section>
 				<section>
 					<h4>Another look</h4>
