feat(upnpav): add slides with FAQs

--- a/presentations/upnp-av/index.html
+++ b/presentations/upnp-av/index.html
@@ -78,6 +78,19 @@
     </ul>
     </section>
     <section>
+    <h3>What are the problems with UPnP AV?</h3>
+    <ul>
+      <li class="fragment">Multicast</li>
+      <li class="fragment">Very generic, implementers have to make lots of choices</li>
+    </ul>
+    </section>
+    <h3>How is it different to DLNA?</h3>
+    <ul>
+      <li class="fragment">DLNA is derived from UPnP AV</li>
+      <li class="fragment">A smaller subset of functionality, with less flexibility</li>
+    </ul>
+    </section>
+    <section>
     <h3>Questions?</h3>
     </section>
   </div>
