WIP: add custom rule screenshot

--- a/presentations/linting/index.html
+++ b/presentations/linting/index.html
@@ -55,7 +55,7 @@
 				<section>
                     <h3>A Quick History</h3>
                     <ul>
-                        <li class="fragment">Name comes from "lint" a unix tool for detecting bugs in C code</li>
+                        <li class="fragment">Name comes from "lint" a Unix tool for detecting bugs in C code</li>
                         <li class="fragment">First seen in V7 of Unix in 1979</li>
                         <li class="fragment">"Linter" became a name for any tool that runs over code to check for potential issues</li>
                     </ul>
@@ -95,6 +95,10 @@ member_prefix: # rule identifier
     message: "Pirates are better than ninjas." # violation message. optional
     severity: error # violation severity. optional
                     </pre></code>
+				</section>
+				<section>
+                    <h3>SwiftLint - Custom Rules</h3>
+                    <img src="presentations/linting/images/custom-rule.png" />
 				</section>
                 <section>
                     <h3>Questions</h3>
